# diffsplat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  build_out.txt  run.sh
.claude/: settings.local.json
archive/: README.md
archive/layers/: rasterize_layer.cu
docs/: GAUSS_ACTIV_README.md  OPTIMIZATION.md  OPTIM_RASTERIZER.md  OPTIM_TILE_ASSIGN_BBOX.md  PERSP_PROJECT_README.md
src/: main.cpp  main_imgfit.cpp  main_plyview.cpp
src/app/: app.cpp  app.h  app_base.cpp  app_base.h  app_imgfit.cpp  app_imgfit.h  app_plyview.cpp  app_plyview.h  fitter_app.cpp  viewer_app.cpp
src/camera/: arcball_camera.cpp  arcball_camera.h  camera.cpp  camera.h  fly_camera.cpp  fly_camera.h
src/cuda/: cuda_buffer.h  cuda_check.h  cuda_defs.h
src/gaussian/: gaussian.cu  gaussian.h
src/input/: input.cpp  input.h
src/io/: gaussian3d_io.cpp  gaussian3d_io.h  image_loader.cpp  image_saver.cpp  image_saver.h  ply_loader.cpp  ply_loader.h  ply_saver.cpp  ply_saver.h
src/kernels/: adam.cu  adam.cuh  backward.cu  backward.cuh  forward.cu  forward.cuh  sort.cu  sort.cuh  tile_assign.cu  tile_assign.cuh  utils.cu  utils.cuh
src/layers/: covariance_layer.cu  covariance_layer.h  gauss_activ_layer.cu  gauss_activ_layer.h  gsplat_rasterize_layer.cu  gsplat_rasterize_layer.h  layer.h  mse_loss_layer.cu  mse_loss_layer.h  ndc_project_layer.cu  ndc_project_layer.h  persp_project_layer.cu  persp_project_layer.h  rasterize_layer.cu  rasterize_layer.h  rasterize_layer_v1.cu  rasterize_layer_v2.cu  rasterize_layer_v3.cu  splat2d_params.h  tile_rasterize_layer.cu  tile_rasterize_layer.h
src/loaders/: image_loader.cpp  image_loader.h  image_saver.cpp  ply_loader.cpp  ply_loader.h
src/optimizers/: adam.cu  adam.cuh  adam.h  gaussian3d_adam.h
src/pipelines/: gauss_img_fitter.cpp  gauss_img_fitter.h  gauss_imgfitter.cpp  gauss_imgfitter.h  gauss_ply_viewer.cpp  gauss_ply_viewer.h  gauss_plyviewer.cpp  gauss_plyviewer.h  image_fitter.cpp  image_fitter.h  pipeline.h  splat_renderer.cpp  splat_renderer.h
src/renderer/: compute_renderer.cpp  compute_renderer.h
src/types/: gaussian3d.h  splat2d.h  splat3d.h
src/utils/: ansi_colors.h  cuda_utils.cuh  cuda_utils.h  gl_utils.h  sh_consts.h  splat_utils.h
tests/: grad_check.cu
